--- a/flask/templates/feed.html
+++ b/flask/templates/feed.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/feedstyle.css') }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="{{ url_for('static',filename='scripts/index.js') }}"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -22,54 +22,84 @@
         <div class="row">
             <div class="col-12">
                 <div class="h-100px card">
-                    <h1>
-                        Welcome to your feed page!
-                    </h1>
+                    <h1> Welcome to your feed page!</h1>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                <div class="h-100px card">
-                    <p>
-                        This is an auto-column, these 3 columns are on the same row
-                    </p>
+            <div class="col-md-8">
+                <div class="media g-mb-30 media-comment">
+                    <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Image Description">
+                    <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+                      <div class="g-mb-15">
+                        <h5 class="h5 g-color-gray-dark-v1 mb-0">John Doe</h5>
+                        <span class="g-color-gray-dark-v4 g-font-size-12">5 days ago</span>
+                      </div>
+                
+                      <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
+                        felis in faucibus ras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+                
+                      <ul class="list-inline d-sm-flex my-0">
+                        <li class="list-inline-item g-mr-20">
+                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                            <i class="fa fa-thumbs-up g-pos-rel g-top-1 g-mr-3"></i>
+                            178
+                          </a>
+                        </li>
+                        <li class="list-inline-item g-mr-20">
+                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                            <i class="fa fa-thumbs-down g-pos-rel g-top-1 g-mr-3"></i>
+                            34
+                          </a>
+                        </li>
+                        <li class="list-inline-item ml-auto">
+                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                            <i class="fa fa-reply g-pos-rel g-top-1 g-mr-3"></i>
+                            Reply
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="h-100px card">
-                    <p>
-                        Same row, column 2
-                    </p>
-                </div>
-            </div>
-            <div class="col">
-                <div class="h-100px card">
-                    <p>Same row, column 3</p>
+        
+            <div class="col-md-8">
+                <div class="media g-mb-30 media-comment">
+                    <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="Image Description">
+                    <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+                      <div class="g-mb-15">
+                        <h5 class="h5 g-color-gray-dark-v1 mb-0">John Doe</h5>
+                        <span class="g-color-gray-dark-v4 g-font-size-12">5 days ago</span>
+                      </div>
+                
+                      <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
+                        felis in faucibus ras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+                
+                      <ul class="list-inline d-sm-flex my-0">
+                        <li class="list-inline-item g-mr-20">
+                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                            <i class="fa fa-thumbs-up g-pos-rel g-top-1 g-mr-3"></i>
+                            178
+                          </a>
+                        </li>
+                        <li class="list-inline-item g-mr-20">
+                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                            <i class="fa fa-thumbs-down g-pos-rel g-top-1 g-mr-3"></i>
+                            34
+                          </a>
+                        </li>
+                        <li class="list-inline-item ml-auto">
+                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                            <i class="fa fa-reply g-pos-rel g-top-1 g-mr-3"></i>
+                            Reply
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-6">
-                <div class="h-100px card">
-                    <p>These are columns with a width set to 6</p>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="h-100px card">
-                    <p>Bootstrap sets column width by col-1, col-2, col-3, ...col-12</p>
-                </div>
-            </div>
         </div>
-        <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6">
-                <div class="h-100px card">
-                    <p>Typical placement involves a container -> row -> column</p>
-                </div>
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
