--- a/flask/static/styles/feedstyle.css
+++ b/flask/static/styles/feedstyle.css
@@ -1,48 +1,63 @@
-body{
-    margin-top:20px;
-    background:#eee;
-}
-@media (min-width: 0) {
-    .g-mr-15 {
-        margin-right: 1.07143rem !important;
-    }
-}
-@media (min-width: 0){
-    .g-mt-3 {
-        margin-top: 0.21429rem !important;
-    }
+body {
+    background: #eee
 }
 
-.g-height-50 {
-    height: 50px;
+.date {
+    font-size: 11px
 }
 
-.g-width-50 {
-    width: 50px !important;
+.comment-text {
+    font-size: 12px
 }
 
-@media (min-width: 0){
-    .g-pa-30 {
-        padding: 2.14286rem !important;
-    }
+.fs-12 {
+    font-size: 12px
 }
 
-.g-bg-secondary {
-    background-color: #fafafa !important;
+.shadow-none {
+    box-shadow: none
 }
 
-.u-shadow-v18 {
-    box-shadow: 0 5px 10px -6px rgba(0, 0, 0, 0.15);
+.name {
+    color: #007bff
 }
 
-.g-color-gray-dark-v4 {
-    color: #777 !important;
+.cursor:hover {
+    color: blue
 }
 
-.g-font-size-12 {
-    font-size: 0.85714rem !important;
+.cursor {
+    cursor: pointer
 }
 
-.media-comment {
-    margin-top:20px
+.textarea {
+    resize: none
+}
+
+.fa-facebook {
+    color: #3b5999
+}
+
+.fa-twitter {
+    color: #55acee
+}
+
+.fa-linkedin {
+    color: #0077B5
+}
+
+.fa-instagram {
+    color: #e4405f
+}
+
+.fa-dribbble {
+    color: #ea4c89
+}
+
+.fa-pinterest {
+    color: #bd081c
+}
+
+.fa {
+    cursor: pointer
 }
