made signup page with username and 2 password fields as well as link to login insted

--- a/flask/templates/signin.html
+++ b/flask/templates/signin.html
@@ -56,15 +56,17 @@ button {
 </head>
 
 <body class="bg-light">
-    <center> <h1> Student Login Form </h1> </center>   
+    <center> <h1> Student Signup Form </h1> </center>   
     <form>  
         <div class="container">   
-            <a href="#"> Sign up</a>
+            <a href="#"> Login</a>
             <div></div>
             <label>Username : </label>   
             <input type="text" placeholder="Enter Username" name="username" required>  
             <label>Password : </label>   
-            <input type="password" placeholder="Enter Password" name="password" required>  
+            <input type="password" placeholder="Enter Password" name="password" required>
+            <label>Re-type Password : </label>   
+            <input type="password" placeholder="Enter Password" name="password-repeat" required>  
             <button type="submit">Login</button>      
             Forgot <a href="#"> password? </a>   
         </div>   
