--- a/flask/templates/createaccount.html
+++ b/flask/templates/createaccount.html
@@ -73,7 +73,7 @@
                         </div>
       
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                          <button type="button" class="btn btn-primary btn-lg">Register</button>
+                          <a class="btn btn-primary" href="feed" role="button">Register</a>
                         </div>
       
                       </form>
