--- a/flask/templates/feed.html
+++ b/flask/templates/feed.html
@@ -59,6 +59,11 @@
                               <div class="like p-2 cursor"><i class="fa fa-thumbs-o-up"></i><span class="ml-1">Like</span></div>
                               <div class="like p-2 cursor action-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="collapse-1" href="#collapse-1"><i class="fa fa-commenting-o"></i><span class="ml-1">Comment</span></div>
                               <div class="like p-2 cursor action-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="collapse-2" href="#collapse-2"><i class="fa fa-share"></i><span class="ml-1">Share</span></div>
+                             <!--  <form action ="{{ url_for('delete_note', note_id=note.id)}}" method="post">
+                                <input type = "submit" value = "Delete">
+                              </form>
+                              Delete stuffs ^^^
+                              -->
                           </div>
                       </div>
                       <div id="collapse-1" class="bg-light p-2 collapse" data-parent="#myGroup">
