Added login page

--- a/flask/static/styles/style.css
+++ b/flask/static/styles/style.css
@@ -12,8 +12,8 @@
     padding: 15px 10px;
 }
 
-.card:hover {
+/* .card:hover {
     box-shadow: 0 3px 8px 2px rgba(0,0,0,0.16);
     transform: translateY(-5px);
     cursor: pointer;
-}
+} */
