--- a/flask/templates/feed.html
+++ b/flask/templates/feed.html
@@ -9,15 +9,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="{{ url_for('static',filename='scripts/index.js') }}"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+    <script src="{{ url_for('static',filename='scripts/feed.js') }}"></script>
   <title>3155-Q-A-Project</title>
 </head>
 
@@ -39,7 +38,7 @@
       </li>
     </ul>
   </nav>
-  <div class="container">
+  <div id="feed-container" class="container">
     <div class="d-flex justify-content-center row my-5">
       <div class="col-8">
         <div class="d-flex justify-content-between">
@@ -50,52 +49,6 @@
           </div>
           <div>
             <button class="btn btn-primary">Ask Question</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="d-flex justify-content-center row">
-      <div class="col-md-8">
-        <div class="d-flex flex-column comment-section" id="myGroup">
-          <div class="bg-white p-2">
-            <div class="d-flex flex-row user-info"><img class="rounded-circle" src="https://i.imgur.com/RpzrMR2.jpg"
-                width="40">
-              <div class="d-flex flex-column justify-content-start ml-2"><span
-                  class="d-block font-weight-bold name">Marry Andrews</span><span class="date text-black-50">Shared
-                  publicly - Jan 2020</span></div>
-            </div>
-            <div class="mt-2">
-              <p class="comment-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
-          </div>
-          <div class="bg-white p-2">
-            <div class="d-flex flex-row fs-12">
-              <div class="like p-2 cursor"><i class="fa fa-thumbs-o-up"></i><span class="ml-1">Like</span></div>
-              <div class="like p-2 cursor action-collapse" data-toggle="collapse" aria-expanded="true"
-                aria-controls="collapse-1" href="#collapse-1"><i class="fa fa-commenting-o"></i><span
-                  class="ml-1">Comment</span></div>
-              <div class="like p-2 cursor action-collapse" data-toggle="collapse" aria-expanded="true"
-                aria-controls="collapse-2" href="#collapse-2"><i class="fa fa-share"></i><span class="ml-1">Share</span>
-              </div>
-            </div>
-          </div>
-          <div id="collapse-1" class="bg-light p-2 collapse" data-parent="#myGroup">
-            <div class="d-flex flex-row align-items-start"><img class="rounded-circle"
-                src="https://i.imgur.com/RpzrMR2.jpg" width="40"><textarea
-                class="form-control ml-1 shadow-none textarea"></textarea></div>
-            <div class="mt-2 text-right"><button class="btn btn-primary btn-sm shadow-none" type="button">Post
-                comment</button><button class="btn btn-outline-primary btn-sm ml-1 shadow-none"
-                type="button">Cancel</button></div>
-          </div>
-          <div id="collapse-2" class="bg-light p-2 collapse" data-parent="#myGroup">
-            <div class="d-flex flex-row align-items-start"><i class="fa fa-facebook border p-3 rounded mr-1"></i><i
-                class="fa fa-twitter border p-3 rounded mr-1"></i><i
-                class="fa fa-linkedin border p-3 rounded mr-1"></i><i
-                class="fa fa-instagram border p-3 rounded mr-1"></i><i
-                class="fa fa-dribbble border p-3 rounded mr-1"></i> <i
-                class="fa fa-pinterest-p border p-3 rounded mr-1"></i> </div>
           </div>
         </div>
       </div>
