Routing between create a post and feed page

--- a/flask/templates/createpost.html
+++ b/flask/templates/createpost.html
@@ -19,7 +19,7 @@
         <span class="navbar-brand mb-0 h1">3155-Q-A-Project</span>
         <ul class="nav nav-pills">
           <li class="nav-item">
-            <a class="nav-link" href="#">Feed Page</a>
+            <a class="nav-link" href="/feed">Feed Page</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Create a Post</a>
