--- a/flask/templates/feed.html
+++ b/flask/templates/feed.html
@@ -48,7 +48,7 @@
             </h2>
           </div>
           <div>
-            <button class="btn btn-primary">Ask Question</button>
+            <button class="btn btn-primary" onclick="route('/ask-question')">Ask Question</button>
           </div>
         </div>
       </div>
