--- a/flask/templates/login.html
+++ b/flask/templates/login.html
@@ -28,12 +28,18 @@
       
                       <form class="mx-1 mx-md-4">
       
-                        <div class="d-flex flex-row align-items-center mb-4">
+                        <div class="d-flex flex-row align-items-center">
                           <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
                             <input type="text" id="usernameInput" class="form-control" />
-                            <label class="form-label" for="usernameInput">Username</label>
+                            <label class="form-label mb-0" for="usernameInput">Username</label>
                           </div>
+                        </div>
+
+                        <div class="d-flex flex-row align-items-center mb-3">
+                          <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                          <p class="text-danger" style="font-size:12px" id="login-error">
+                          </p>
                         </div>
       
                         <div class="d-flex flex-row align-items-center mb-4">
@@ -43,6 +49,8 @@
                             <label class="form-label" for="passwordInput">Password</label>
                           </div>
                         </div>
+
+
       
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                           <button type="button" class="btn btn-primary btn-lg" onclick="login()">Login</button>
