Added a create-account link to login page

--- a/flask/templates/login.html
+++ b/flask/templates/login.html
@@ -57,7 +57,9 @@
                         </div>
 
                         <!-- TODO: Create Account button that takes you to the create account page -->
-      
+                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                          <button type="button" class="btn btn-primary btn-lg" onclick="location.href='/createaccount'">Create Account</button>
+                        </div>
                       </form>
       
                     </div>
