--- a/flask/templates/login.html
+++ b/flask/templates/login.html
@@ -24,16 +24,22 @@
                   <div class="row justify-content-center">
                     <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
       
-                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Login to QnA Post Account</p>
+                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Login to QnA Post Account this is a test</p>
       
                       <form class="mx-1 mx-md-4">
       
-                        <div class="d-flex flex-row align-items-center mb-4">
+                        <div class="d-flex flex-row align-items-center">
                           <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
                             <input type="text" id="usernameInput" class="form-control" />
-                            <label class="form-label" for="usernameInput">Username</label>
+                            <label class="form-label mb-0" for="usernameInput">Username</label>
                           </div>
+                        </div>
+
+                        <div class="d-flex flex-row align-items-center mb-3">
+                          <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                          <p class="text-danger" style="font-size:12px" id="login-error">
+                          </p>
                         </div>
       
                         <div class="d-flex flex-row align-items-center mb-4">
@@ -43,13 +49,17 @@
                             <label class="form-label" for="passwordInput">Password</label>
                           </div>
                         </div>
+
+
       
                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                           <button type="button" class="btn btn-primary btn-lg" onclick="login()">Login</button>
                         </div>
 
                         <!-- TODO: Create Account button that takes you to the create account page -->
-      
+                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                          <button type="button" class="btn btn-primary btn-lg" onclick="location.href='/createaccount'">Create Account</button>
+                        </div>
                       </form>
       
                     </div>
