--- a/flask/templates/createpost.html
+++ b/flask/templates/createpost.html
@@ -12,12 +12,12 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <title>3155-Q-A-Project</title>
+  <title>Flask Overflow</title>
 </head>
 
 <body class="bg-light">
     <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-0 h1">3155-Q-A-Project</span>
+        <span class="navbar-brand mb-0 h1">Flask Overflow</span>
         <ul class="nav nav-pills">
           <li class="nav-item">
             <a class="nav-link" href="/feed">Feed Page</a>
