--- a/flask/templates/feed.html
+++ b/flask/templates/feed.html
@@ -17,12 +17,12 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
     <script src="{{ url_for('static',filename='scripts/feed.js') }}"></script>
-  <title>3155-Q-A-Project</title>
+  <title>Flask Overflow</title>
 </head>
 
 <body class="bg-light">
   <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0 h1">3155-Q-A-Project</span>
+    <span class="navbar-brand mb-0 h1">Flask Overflow</span>
     <ul class="nav nav-pills">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#">Active</a>
