--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -18,12 +18,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <title>3155-Q-A-Project</title>
+    <title>Flask Overflow</title>
 </head>
 
 <body class="bg-light">
     <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-0 h1">3155-Q-A-Project</span>
+        <span class="navbar-brand mb-0 h1">Flask Overflow</span>
     </nav>
     <div class="container">
         <div class="row">
