--- a/flask/templates/login.html
+++ b/flask/templates/login.html
@@ -7,16 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="{{ url_for('static',filename='scripts/index.js') }}"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <title>3155-Q-A-Project</title>
+    <script src="{{ url_for('static',filename='scripts/index.js') }}"></script>
+    <script src="{{ url_for('static',filename='scripts/login.js') }}"></script>
+  <title>Flask Overflow</title>
 </head>
 
 <body class="bg-light">
-    <section class="vh-100" style="background-color: #eee;">
-        <div class="container h-100">
+    <section style="background-color: #eee; min-height: 100vh;">
+        <div class="container h-100 pb-3">
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-lg-12 col-xl-11">
               <div class="card text-black" style="border-radius: 25px;">
@@ -24,14 +25,14 @@
                   <div class="row justify-content-center">
                     <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
       
-                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Login to QnA Post Account this is a test</p>
+                      <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Flask Overflow</p>
       
-                      <form class="mx-1 mx-md-4">
+                      <form action="#" id="login-form" class="mx-1 mx-md-4">
       
                         <div class="d-flex flex-row align-items-center">
                           <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
-                            <input type="text" id="usernameInput" class="form-control" />
+                            <input type="text" id="usernameInput" class="form-control" required/>
                             <label class="form-label mb-0" for="usernameInput">Username</label>
                           </div>
                         </div>
@@ -45,21 +46,18 @@
                         <div class="d-flex flex-row align-items-center mb-4">
                           <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                           <div class="form-outline flex-fill mb-0">
-                            <input type="password" id="passwordInput" class="form-control" />
+                            <input type="password" id="passwordInput" class="form-control" required/>
                             <label class="form-label" for="passwordInput">Password</label>
                           </div>
                         </div>
 
 
       
-                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                          <button type="button" class="btn btn-primary btn-lg" onclick="login()">Login</button>
+                        <div class="d-flex justify-content-between pl-3">
+                          <button type="button" class="w-45 btn btn-light" style="border: 1px solid #eee" onclick="route('/signup')">Create Account</button>
+                          <input type="submit" class="w-45 btn btn-dark" onclick="login()" value="Login" />
                         </div>
 
-                        <!-- TODO: Create Account button that takes you to the create account page -->
-                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                          <button type="button" class="btn btn-primary btn-lg" onclick="location.href='/createaccount'">Create Account</button>
-                        </div>
                       </form>
       
                     </div>
