Added username auth

--- a/flask/templates/feed.html
+++ b/flask/templates/feed.html
@@ -25,16 +25,7 @@
     <span class="navbar-brand mb-0 h1">Flask Overflow</span>
     <ul class="nav nav-pills">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Active</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled">Disabled</a>
+        <h4 id="user-profile" class="text-white"></h4>
       </li>
     </ul>
   </nav>
