added navbar functionality

--- a/flask/templates/feed.html
+++ b/flask/templates/feed.html
@@ -32,7 +32,10 @@
           <a class="nav-link disabled" aria-current="page" href="#">Feed Page</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/ask-question" onclick="route('/ask-question')">Ask Question</a>
+          <a class="nav-link" href="#" onclick="route('/ask-question')">Ask Question</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" onclick="route('/profile')">Profile Page</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Logout</a>
