--- a/flask/templates/createpost.html
+++ b/flask/templates/createpost.html
@@ -20,10 +20,13 @@
       <span class="navbar-brand mb-0 h1">Flask Overflow</span>
         <ul class="nav nav-pills">
           <li class="nav-item">
-            <a class="nav-link" href="/feed" onclick="route('/feed')">Feed Page</a>
+            <a class="nav-link" href="#" onclick="route('/feed')">Feed Page</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" aria-current="page" href="#">Ask Question</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" onclick="route('/profile')">Profile Page</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Logout</a>
