Added feature to delete question

--- a/flask_app/templates/feed.html
+++ b/flask_app/templates/feed.html
@@ -48,7 +48,7 @@
         <a class="nav-link active" onclick="route('/profile')">Profile Page</a>
       </li>
       <li class="nav-item me-1">
-        <a class="nav-link active" href="#">Logout</a>
+        <a class="nav-link active" href="#" onclick="logout()">Logout</a>
     </ul>
   </nav>
   <div id="feed-container" class="container">
