--- a/flask_app/templates/profile.html
+++ b/flask_app/templates/profile.html
@@ -45,7 +45,7 @@
         <a class="nav-link disabled" onclick="route('/profile')">Profile Page</a>
       </li>
       <li class="nav-item me-1">
-        <a class="nav-link active" href="#">Logout</a>
+        <a class="nav-link active" href="#" onclick="logout()">Logout</a>
     </ul>
   </nav>
   <div class="container-fluid m-1">
