fixing bug with editpost.html

--- a/flask_app/templates/editquestion.html
+++ b/flask_app/templates/editquestion.html
@@ -56,7 +56,7 @@
                   <textarea class="form-control" placeholder="Content here" id="question-contents" rows="3"></textarea>
                 </div>
               </form>
-              <input class="btn btn-primary mb-1 mt-2" type="submit" value="Submit Edit" onclick="submitPost()">
+              <input id="submit-edit" class="btn btn-primary mb-1 mt-2" type="submit" value="Submit Edit">
             </div>
           </div>
         </div>
