--- a/flask_app/templates/viewquestion.html
+++ b/flask_app/templates/viewquestion.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/feedstyle.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -44,7 +44,7 @@
                 <a class="nav-link active" href="#" onclick="logout()">Logout</a>
         </ul>
     </nav>
-    <div class="container" style="margin-bottom: 18%;">
+    <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="m-4">
@@ -134,16 +134,16 @@
         </div>
     </div>
     </div>
-    <div class="fixed-bottom mr-2" style="margin-bottom: 18%; text-align: right;">
-        <a data-toggle="collapse" id="top-arrow" href="#collapse1"><i class="fas fa-arrow-circle-down"></i></a>
-    </div>
     <div class="fixed-bottom m-2" style="text-align: right;">
         <a data-toggle="collapse" id='bottom-arrow' href="#collapse1"><i class="fas fa-arrow-circle-up"></i></a>
     </div>
 </body>
 <footer>
     <div id="collapse1" class="panel-collapse collapse">
-        <div class="fixed-bottom p-5 bg-dark">
+        <div class="fixed-bottom px-5 pb-5 bg-dark">
+            <div class="d-flex justify-content-end py-1 pr-2 mr-n5">
+                <a data-toggle="collapse" id='top-arrow' href="#collapse1"><i class="fas fa-chevron-down text-white p-2 btn-answer"></i></a>
+            </div>
             <div class="form-floating">
                 <textarea class="form-control" placeholder="Answer me!" id="answer-question"
                     style="height: 100px"></textarea>
@@ -154,12 +154,12 @@
     </div>
 </footer>
 <script>
-    $('#top-arrow').hide();
+    $('#top-arrow').fadeOut();
     $('#bottom-arrow').on("click", function () {
-        $('#top-arrow').show();
+        $('#top-arrow').fadeIn();
     });
     $('#top-arrow').on("click", function () {
-        $('#top-arrow').hide();
+        $('#top-arrow').fadeOut();
     });
 </script>
 
