--- a/flask_app/templates/viewquestion.html
+++ b/flask_app/templates/viewquestion.html
@@ -57,7 +57,9 @@
                         <span class="d-flex justify-content-between mb-2">
                             <h6 id="user-asks"></h6><span><button id="edit-button" class="btn btn-secondary mr-3"
                                     style="display: none;">Edit Question</button><button id="delete-button"
-                                    class="btn btn-danger" style="display: none;">Delete Question</button></span>
+                                    class="btn btn-danger" style="display: none;">Delete Question</button>
+                                    <button id="report-button" class="btn btn-danger">Report Question</button>
+                                </span>
                         </span>
                         <hr class="mt-0 mx-n3">
                         <p id="question-body">
