created the reactions feature

--- a/flask_app/static/styles/style.css
+++ b/flask_app/static/styles/style.css
@@ -50,3 +50,8 @@ body {
     background-color: white!important;
     color: red!important;
 }
+
+.btn-reacted {
+    background-color: white!important;
+    color: green!important;
+}
